[gd_scene load_steps=3 format=3 uid="uid://dopyruekt28g4"]

[ext_resource type="Script" uid="uid://dyk81flt3qkod" path="res://Resources/Apps/SoulsApp/SoulsApp.gd" id="1_2in50"]
[ext_resource type="PackedScene" uid="uid://5fhhaltq3men" path="res://Scenes/SmartLabel/SmartLabel.tscn" id="1_8c4b3"]

[node name="SoulsApp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_2in50")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TotalSoulsLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_8c4b3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
theme_override_font_sizes/font_size = 32
text = "SOULS: {TOTAL_SOULS}"
horizontal_alignment = 1

[node name="SoulsBucketLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_8c4b3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
theme_override_font_sizes/font_size = 32
text = "SOULS FLOATING BUCKET: {SOULS_BUCKET}"
horizontal_alignment = 1

[node name="HarvetSoulButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Harvest Soul"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HarvetSoulButton" to="." method="_on_harvet_soul_button_pressed"]
